# _ost_runner_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  openstrata.ci.yaml  openstrata.toml
.github/workflows/: ost-source-ci.yml
plugins/toy/: .gitignore  CMakeLists.txt  README.md  openstrata.plugin.yaml
plugins/toy/plugin/resources/toy/: plugInfo.json  plugInfo.json.in
plugins/toy/src/: ToyFileFormat.cpp  ToyFileFormat.h
plugins/toy/tests/fixtures/: basic.toy  basic.toy.golden.usda  invalid.toy
